parser.output
State 43 conflicts: 1 shift/reduce
State 92 conflicts: 1 shift/reduce
State 93 conflicts: 1 shift/reduce
State 133 conflicts: 17 shift/reduce
State 136 conflicts: 1 shift/reduce
State 141 conflicts: 1 shift/reduce
State 210 conflicts: 1 reduce/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: PROG

    2 PROG: PROGELEMENT
    3     | PROGELEMENT PROG

    4 PROGELEMENT: VARIABLEDECLARATION colon
    5            | ARRAYDECLARATION colon
    6            | ENUMERATIONSPECIFIER colon
    7            | FUNTIONDECLARATION colon
    8            | FUNCTIONDEFINITION

    9 FUNTIONDECLARATION: dataType identifier lBracket PARAMETERLIST rBracket

   10 FUNCTIONDEFINITION: dataType identifier lBracket PARAMETERLIST rBracket lCurlyBracket STATEMENTLIST rCurlyBracket
   11                   | dataType identifier lBracket PARAMETERLIST rBracket lCurlyBracket rCurlyBracket

   12 VARIABLEDECLARATION: dataType identifier
   13                    | dataType identifier assign LOGICALOREXPRESSION
   14                    | identifier identifier

   15 ARRAYDECLARATION: dataType identifier lSquareBracket LOGICALOREXPRESSION rSquareBracket

   16 PARAMETERLIST: dataType identifier comma PARAMETERLIST
   17              | dataType identifier
   18              | %empty

   19 STATEMENTLIST: STATEMENT
   20              | STATEMENT STATEMENTLIST

   21 BREAKSTATEMENT: breakT

   22 CONTINUESTATEMENT: continueT

   23 STATEMENT: LOOP
   24          | VARIABLEDECLARATION colon
   25          | ARRAYDECLARATION colon
   26          | ASSIGNMENT colon
   27          | BREAKSTATEMENT colon
   28          | CONTINUESTATEMENT colon
   29          | CONDITIONAL
   30          | ENUMERATIONSPECIFIER colon
   31          | colon
   32          | RETURNSTATEMENT
   33          | FUNCTIONCALL colon
   34          | LOGICALOREXPRESSION colon

   35 ASSIGNMENT: identifier assign ASSIGNMENT
   36           | SUBSCRIPT assign LOGICALOREXPRESSION
   37           | FACTOR plusEquals FACTOR
   38           | FACTOR minusEquals FACTOR
   39           | FACTOR timesEquals FACTOR
   40           | FACTOR divEquals FACTOR
   41           | FACTOR modEquals FACTOR
   42           | FACTOR andEquals FACTOR
   43           | FACTOR orEquals FACTOR
   44           | FACTOR xorEquals FACTOR
   45           | FACTOR lShiftEquals FACTOR
   46           | FACTOR rShiftEquals FACTOR
   47           | LOGICALOREXPRESSION

   48 ENUMERATIONSPECIFIER: enumT identifier lCurlyBracket ENUMERATORLIST rCurlyBracket

   49 ENUMERATORLIST: ENUMERATOR
   50               | ENUMERATOR comma
   51               | ENUMERATOR comma ENUMERATORLIST

   52 ENUMERATOR: identifier assign LOGICALOREXPRESSION
   53           | identifier

   54 FUNCTIONCALL: identifier lBracket CONCRETEPARAMETERLIST rBracket

   55 CONCRETEPARAMETERLIST: LOGICALOREXPRESSION comma CONCRETEPARAMETERLIST
   56                      | LOGICALOREXPRESSION
   57                      | %empty

   58 RETURNSTATEMENT: ret LOGICALOREXPRESSION colon

   59 LOOP: loopWhile lBracket LOGICALOREXPRESSION rBracket STATEMENTLIST
   60     | loopWhile lBracket LOGICALOREXPRESSION rBracket lCurlyBracket STATEMENTLIST rCurlyBracket
   61     | loopWhile lBracket LOGICALOREXPRESSION rBracket lCurlyBracket rCurlyBracket
   62     | loopFor lBracket ASSIGNMENT colon LOGICALOREXPRESSION colon ASSIGNMENT rBracket STATEMENTLIST
   63     | loopFor lBracket ASSIGNMENT colon LOGICALOREXPRESSION colon ASSIGNMENT rBracket lCurlyBracket STATEMENTLIST rCurlyBracket
   64     | loopFor lBracket ASSIGNMENT colon LOGICALOREXPRESSION colon ASSIGNMENT rBracket lCurlyBracket rCurlyBracket

   65 CONDITIONAL: condIf lBracket LOGICALOREXPRESSION rBracket STATEMENTLIST
   66            | condIf lBracket LOGICALOREXPRESSION rBracket STATEMENTLIST condElse STATEMENTLIST
   67            | condIf lBracket LOGICALOREXPRESSION rBracket lCurlyBracket STATEMENTLIST rCurlyBracket condElse STATEMENTLIST
   68            | condIf lBracket LOGICALOREXPRESSION rBracket STATEMENTLIST condElse lCurlyBracket STATEMENTLIST rCurlyBracket
   69            | condIf lBracket LOGICALOREXPRESSION rBracket lCurlyBracket STATEMENTLIST rCurlyBracket
   70            | condIf lBracket LOGICALOREXPRESSION rBracket lCurlyBracket STATEMENTLIST rCurlyBracket condElse lCurlyBracket STATEMENTLIST rCurlyBracket
   71            | condSwitch lBracket LOGICALOREXPRESSION rBracket lCurlyBracket CASELIST rCurlyBracket

   72 CASELIST: CASE
   73         | CASE CASELIST
   74         | STATEMENTLIST CASELIST
   75         | %empty

   76 CASE: caseT LOGICALOREXPRESSION colonT STATEMENTLIST
   77     | defaultT colonT STATEMENTLIST

   78 SUBSCRIPT: identifier lSquareBracket LOGICALOREXPRESSION rSquareBracket

   79 EQUALITYEXPRESSION: RELATIONALEXPRESSION
   80                   | EQUALITYEXPRESSION equalsOp RELATIONALEXPRESSION
   81                   | EQUALITYEXPRESSION notEqualOp RELATIONALEXPRESSION

   82 ANDEXPRESSION: EQUALITYEXPRESSION
   83              | ANDEXPRESSION bitWiseAndOp EQUALITYEXPRESSION

   84 EXCLUSIVEOREXPRESSION: ANDEXPRESSION
   85                      | EXCLUSIVEOREXPRESSION bitWiseEorOp ANDEXPRESSION

   86 INCLUSIVEOREXPRESSION: EXCLUSIVEOREXPRESSION
   87                      | INCLUSIVEOREXPRESSION bitWiseIorOp EXCLUSIVEOREXPRESSION

   88 LOGICALANDEXPRESSION: INCLUSIVEOREXPRESSION
   89                     | LOGICALANDEXPRESSION logicalAndOp INCLUSIVEOREXPRESSION

   90 LOGICALOREXPRESSION: LOGICALANDEXPRESSION
   91                    | LOGICALOREXPRESSION logicalOrOp LOGICALANDEXPRESSION

   92 RELATIONALEXPRESSION: SHIFTEXPRESSION
   93                     | RELATIONALEXPRESSION lt SHIFTEXPRESSION
   94                     | RELATIONALEXPRESSION gt SHIFTEXPRESSION
   95                     | RELATIONALEXPRESSION lte SHIFTEXPRESSION
   96                     | RELATIONALEXPRESSION gte SHIFTEXPRESSION
   97                     | RELATIONALEXPRESSION equalsOp SHIFTEXPRESSION

   98 SHIFTEXPRESSION: ADDITIVEEXPRESSION
   99                | SHIFTEXPRESSION leftOp ADDITIVEEXPRESSION
  100                | SHIFTEXPRESSION rightOp ADDITIVEEXPRESSION

  101 ADDITIVEEXPRESSION: MULTIPLICATIVEEXPRESSION
  102                   | ADDITIVEEXPRESSION plus MULTIPLICATIVEEXPRESSION
  103                   | ADDITIVEEXPRESSION minus MULTIPLICATIVEEXPRESSION

  104 MULTIPLICATIVEEXPRESSION: FACTOR plusPlus
  105                         | FACTOR minusMinus
  106                         | plusPlus FACTOR
  107                         | minusMinus FACTOR
  108                         | MULTIPLICATIVEEXPRESSION times FACTOR
  109                         | MULTIPLICATIVEEXPRESSION divide FACTOR
  110                         | MULTIPLICATIVEEXPRESSION modulo FACTOR
  111                         | FACTOR

  112 UNARYMINUS: minus FACTOR
  113           | logicalNotOp FACTOR

  114 FACTOR: number
  115       | lBracket RELATIONALEXPRESSION rBracket
  116       | identifier
  117       | SUBSCRIPT
  118       | FUNCTIONCALL
  119       | UNARYMINUS


Terminals, with rules where they appear

$end (0) 0
error (256)
times (258) 108
divide (259) 109
plus (260) 102
minus (261) 103 112
assign (262) 13 35 36 52
condIf (263) 65 66 67 68 69 70
condElse (264) 66 67 68 70
notEqualOp (265) 81
bitWiseAndOp (266) 83
bitWiseIorOp (267) 87
bitWiseEorOp (268) 85
logicalAndOp (269) 89
logicalOrOp (270) 91
lBracket (271) 9 10 11 54 59 60 61 62 63 64 65 66 67 68 69 70 71 115
rBracket (272) 9 10 11 54 59 60 61 62 63 64 65 66 67 68 69 70 71 115
lCurlyBracket (273) 10 11 48 60 61 63 64 67 68 69 70 71
rCurlyBracket (274) 10 11 48 60 61 63 64 67 68 69 70 71
plusEquals (275) 37
minusEquals (276) 38
timesEquals (277) 39
comma (278) 16 50 51 55
breakT (279) 21
enumT (280) 48
divEquals (281) 40
modEquals (282) 41
andEquals (283) 42
orEquals (284) 43
xorEquals (285) 44
lShiftEquals (286) 45
logicalNotOp (287) 113
rShiftEquals (288) 46
number (289) 114
identifier (290) 9 10 11 12 13 14 15 16 17 35 48 52 53 54 78 116
dataType (291) 9 10 11 12 13 15 16 17
colon (292) 4 5 6 7 24 25 26 27 28 30 31 33 34 58 62 63 64
loopWhile (293) 59 60 61
loopFor (294) 62 63 64
gt (295) 94
gte (296) 96
lt (297) 93
lte (298) 95
leftOp (299) 99
rightOp (300) 100
modulo (301) 110
ret (302) 58
equalsOp (303) 80 97
lSquareBracket (304) 15 78
rSquareBracket (305) 15 78
caseT (306) 76
defaultT (307) 77
condSwitch (308) 71
colonT (309) 76 77
continueT (310) 22
plusPlus (311) 104 106
minusMinus (312) 105 107
"then" (313)


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
ROOT (60)
    on left: 1, on right: 0
PROG (61)
    on left: 2 3, on right: 1 3
PROGELEMENT (62)
    on left: 4 5 6 7 8, on right: 2 3
FUNTIONDECLARATION (63)
    on left: 9, on right: 7
FUNCTIONDEFINITION (64)
    on left: 10 11, on right: 8
VARIABLEDECLARATION (65)
    on left: 12 13 14, on right: 4 24
ARRAYDECLARATION (66)
    on left: 15, on right: 5 25
PARAMETERLIST (67)
    on left: 16 17 18, on right: 9 10 11 16
STATEMENTLIST (68)
    on left: 19 20, on right: 10 20 59 60 62 63 65 66 67 68 69 70 74
    76 77
BREAKSTATEMENT (69)
    on left: 21, on right: 27
CONTINUESTATEMENT (70)
    on left: 22, on right: 28
STATEMENT (71)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34, on right: 19 20
ASSIGNMENT (72)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47, on right: 26 35
    62 63 64
ENUMERATIONSPECIFIER (73)
    on left: 48, on right: 6 30
ENUMERATORLIST (74)
    on left: 49 50 51, on right: 48 51
ENUMERATOR (75)
    on left: 52 53, on right: 49 50 51
FUNCTIONCALL (76)
    on left: 54, on right: 33 118
CONCRETEPARAMETERLIST (77)
    on left: 55 56 57, on right: 54 55
RETURNSTATEMENT (78)
    on left: 58, on right: 32
LOOP (79)
    on left: 59 60 61 62 63 64, on right: 23
CONDITIONAL (80)
    on left: 65 66 67 68 69 70 71, on right: 29
CASELIST (81)
    on left: 72 73 74 75, on right: 71 73 74
CASE (82)
    on left: 76 77, on right: 72 73
SUBSCRIPT (83)
    on left: 78, on right: 36 117
EQUALITYEXPRESSION (84)
    on left: 79 80 81, on right: 80 81 82 83
ANDEXPRESSION (85)
    on left: 82 83, on right: 83 84 85
EXCLUSIVEOREXPRESSION (86)
    on left: 84 85, on right: 85 86 87
INCLUSIVEOREXPRESSION (87)
    on left: 86 87, on right: 87 88 89
LOGICALANDEXPRESSION (88)
    on left: 88 89, on right: 89 90 91
LOGICALOREXPRESSION (89)
    on left: 90 91, on right: 13 15 34 36 47 52 55 56 58 59 60 61 62
    63 64 65 66 67 68 69 70 71 76 78 91
RELATIONALEXPRESSION (90)
    on left: 92 93 94 95 96 97, on right: 79 80 81 93 94 95 96 97 115
SHIFTEXPRESSION (91)
    on left: 98 99 100, on right: 92 93 94 95 96 97 99 100
ADDITIVEEXPRESSION (92)
    on left: 101 102 103, on right: 98 99 100 102 103
MULTIPLICATIVEEXPRESSION (93)
    on left: 104 105 106 107 108 109 110 111, on right: 101 102 103
    108 109 110
UNARYMINUS (94)
    on left: 112 113, on right: 119
FACTOR (95)
    on left: 114 115 116 117 118 119, on right: 37 38 39 40 41 42 43
    44 45 46 104 105 106 107 108 109 110 111 112 113


State 0

    0 $accept: . ROOT $end

    enumT       shift, and go to state 1
    identifier  shift, and go to state 2
    dataType    shift, and go to state 3

    ROOT                  go to state 4
    PROG                  go to state 5
    PROGELEMENT           go to state 6
    FUNTIONDECLARATION    go to state 7
    FUNCTIONDEFINITION    go to state 8
    VARIABLEDECLARATION   go to state 9
    ARRAYDECLARATION      go to state 10
    ENUMERATIONSPECIFIER  go to state 11


State 1

   48 ENUMERATIONSPECIFIER: enumT . identifier lCurlyBracket ENUMERATORLIST rCurlyBracket

    identifier  shift, and go to state 12


State 2

   14 VARIABLEDECLARATION: identifier . identifier

    identifier  shift, and go to state 13


State 3

    9 FUNTIONDECLARATION: dataType . identifier lBracket PARAMETERLIST rBracket
   10 FUNCTIONDEFINITION: dataType . identifier lBracket PARAMETERLIST rBracket lCurlyBracket STATEMENTLIST rCurlyBracket
   11                   | dataType . identifier lBracket PARAMETERLIST rBracket lCurlyBracket rCurlyBracket
   12 VARIABLEDECLARATION: dataType . identifier
   13                    | dataType . identifier assign LOGICALOREXPRESSION
   15 ARRAYDECLARATION: dataType . identifier lSquareBracket LOGICALOREXPRESSION rSquareBracket

    identifier  shift, and go to state 14


State 4

    0 $accept: ROOT . $end

    $end  shift, and go to state 15


State 5

    1 ROOT: PROG .

    $default  reduce using rule 1 (ROOT)


State 6

    2 PROG: PROGELEMENT .
    3     | PROGELEMENT . PROG

    enumT       shift, and go to state 1
    identifier  shift, and go to state 2
    dataType    shift, and go to state 3

    $default  reduce using rule 2 (PROG)

    PROG                  go to state 16
    PROGELEMENT           go to state 6
    FUNTIONDECLARATION    go to state 7
    FUNCTIONDEFINITION    go to state 8
    VARIABLEDECLARATION   go to state 9
    ARRAYDECLARATION      go to state 10
    ENUMERATIONSPECIFIER  go to state 11


State 7

    7 PROGELEMENT: FUNTIONDECLARATION . colon

    colon  shift, and go to state 17


State 8

    8 PROGELEMENT: FUNCTIONDEFINITION .

    $default  reduce using rule 8 (PROGELEMENT)


State 9

    4 PROGELEMENT: VARIABLEDECLARATION . colon

    colon  shift, and go to state 18


State 10

    5 PROGELEMENT: ARRAYDECLARATION . colon

    colon  shift, and go to state 19


State 11

    6 PROGELEMENT: ENUMERATIONSPECIFIER . colon

    colon  shift, and go to state 20


State 12

   48 ENUMERATIONSPECIFIER: enumT identifier . lCurlyBracket ENUMERATORLIST rCurlyBracket

    lCurlyBracket  shift, and go to state 21


State 13

   14 VARIABLEDECLARATION: identifier identifier .

    $default  reduce using rule 14 (VARIABLEDECLARATION)


State 14

    9 FUNTIONDECLARATION: dataType identifier . lBracket PARAMETERLIST rBracket
   10 FUNCTIONDEFINITION: dataType identifier . lBracket PARAMETERLIST rBracket lCurlyBracket STATEMENTLIST rCurlyBracket
   11                   | dataType identifier . lBracket PARAMETERLIST rBracket lCurlyBracket rCurlyBracket
   12 VARIABLEDECLARATION: dataType identifier .
   13                    | dataType identifier . assign LOGICALOREXPRESSION
   15 ARRAYDECLARATION: dataType identifier . lSquareBracket LOGICALOREXPRESSION rSquareBracket

    assign          shift, and go to state 22
    lBracket        shift, and go to state 23
    lSquareBracket  shift, and go to state 24

    $default  reduce using rule 12 (VARIABLEDECLARATION)


State 15

    0 $accept: ROOT $end .

    $default  accept


State 16

    3 PROG: PROGELEMENT PROG .

    $default  reduce using rule 3 (PROG)


State 17

    7 PROGELEMENT: FUNTIONDECLARATION colon .

    $default  reduce using rule 7 (PROGELEMENT)


State 18

    4 PROGELEMENT: VARIABLEDECLARATION colon .

    $default  reduce using rule 4 (PROGELEMENT)


State 19

    5 PROGELEMENT: ARRAYDECLARATION colon .

    $default  reduce using rule 5 (PROGELEMENT)


State 20

    6 PROGELEMENT: ENUMERATIONSPECIFIER colon .

    $default  reduce using rule 6 (PROGELEMENT)


State 21

   48 ENUMERATIONSPECIFIER: enumT identifier lCurlyBracket . ENUMERATORLIST rCurlyBracket

    identifier  shift, and go to state 25

    ENUMERATORLIST  go to state 26
    ENUMERATOR      go to state 27


State 22

   13 VARIABLEDECLARATION: dataType identifier assign . LOGICALOREXPRESSION

    minus         shift, and go to state 28
    lBracket      shift, and go to state 29
    logicalNotOp  shift, and go to state 30
    number        shift, and go to state 31
    identifier    shift, and go to state 32
    plusPlus      shift, and go to state 33
    minusMinus    shift, and go to state 34
